# weedle

./: .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: argument.rs  arguments.rs  attribute.rs  attributes.rs  callback.rs  common.rs  dictionary.rs  enums.rs  includes.rs  interface.rs  lib.rs  literal.rs  literals.rs  macros.rs  mixin.rs  module.rs  namespace.rs  others.rs  partial.rs  term.rs  terminals.rs  types.rs  whitespace.rs
tests/: webidl.rs
tests/defs/: interface-constructor.webidl  mediacapture-streams.webidl  modules.webidl  streams.webidl
