[package]
name = "weedle"
version = "0.2.1"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
description = "A WebIDL Parser"
license = "MIT"
documentation = "https://docs.rs/weedle"
homepage = "https://github.com/csharad/weedle"
repository = "https://github.com/csharad/weedle"
readme = "./README.md"

[dependencies]
nom = { version = "4.0.0-beta3", features = ["regexp_macros"] }
regex = "0.2.10"
lazy_static = "1.0.0"
