[package]
name = "weedle"
version = "0.6.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
description = "A WebIDL Parser"
license = "MIT"
documentation = "https://docs.rs/weedle"
homepage = "https://github.com/rustwasm/weedle"
repository = "https://github.com/rustwasm/weedle"
readme = "./README.md"

[dependencies]
nom = { version = "4.0.0", features = ["regexp_macros"] }
regex = "1.0.0"
lazy_static = "1.0.0"
