[package]
name = "weedle"
version = "0.12.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
description = "A WebIDL Parser"
license = "MIT"
documentation = "https://docs.rs/weedle"
homepage = "https://github.com/rustwasm/weedle"
repository = "https://github.com/rustwasm/weedle"
readme = "./README.md"
edition = "2018"

[dependencies]
nom = { version = "6.1.2", default-features = false, features = ["std"] }
